--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nuxt": "^1.0.0",
     "ope": "^1.0.2",
     "query-string": "^5.1.0",
+    "request": "^2.83.0",
     "sass-loader": "^6.0.7",
     "session-file-store": "^1.2.0",
     "superagent": "^3.8.2",
