--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.4",
     "element-ui": "^2.2.1",
     "express-session": "^1.15.6",
+    "multer": "^1.3.0",
     "node-sass": "^4.7.2",
     "nuxt": "^1.0.0",
     "ope": "^1.0.2",
