--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint"
+    "precommit": "npm run lint",
+    "init": "node db/init-db.js"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -19,12 +20,15 @@
     "element-ui": "^2.2.1",
     "express-session": "^1.15.6",
     "multer": "^1.3.0",
+    "mysql2": "^1.5.3",
     "node-sass": "^4.7.2",
     "nuxt": "^1.0.0",
     "ope": "^1.0.2",
     "query-string": "^5.1.0",
     "request": "^2.83.0",
+    "require-dir": "^1.0.0",
     "sass-loader": "^6.0.7",
+    "sequelize": "^4.37.3",
     "session-file-store": "^1.2.0",
     "superagent": "^3.8.2",
     "wechaty": "^0.13.72"
